upgrade to java 17 & clean up