@@ -7,26 +7,25 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Slf4j
 public class CorpusCSVFileParser {
 
-    public static List<DictionaryEntry> parse(String filePath) {
+    public static List<DictionaryEntry> parse(final String filePath) {
 
         try (Stream<String> lines = Files.lines(Paths.get(filePath))) {
             return lines
                     .map(line -> createDictionaryEntry(line.split(",")))
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             e.printStackTrace();
         }
 
-       return new ArrayList<>();
+        return new ArrayList<>();
     }
 
-    private static DictionaryEntry createDictionaryEntry(String[] entryData) {
+    private static DictionaryEntry createDictionaryEntry(final String[] entryData) {
 
         try {
             final int rank = Integer.parseInt(entryData[0]);
@@ -37,10 +36,10 @@ public class CorpusCSVFileParser {
             WordData wordData = new WordData5000(word, rank, partOfSpeech, frequency, dispersion);
 
             if (rank == 1)
-                log.info("Loading the dictionary with the first entry: \n\t[word=" + entryData[1] + ", wordData=" + wordData);
+                log.info("Loading the dictionary with the first entry: \n\t[word=%s, wordData=%s]".formatted(entryData[1], wordData));
 
             if (rank == 5000)
-                log.info("Finished loading the dictionary with last entry: \n\t[word=" + entryData[1] + ", wordData=" + wordData);
+                log.info("Finished loading the dictionary with last entry: \n\t[word=%s, wordData=%s]".formatted(entryData[1], wordData));
 
             return new DictionaryEntry5000(word, wordData);
 
